# semisimul

./: .gitignore  Makefile  PROJECT_STATUS_REPORT.md  README.md  TDD_KPI.md  module_plan.md  plan.md  plan_TDD.md  pyproject.toml  research.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/: deck_analysis_history_vtk.yaml  deck_basic.yaml  deck_oxidation_implant_anneal.yaml  deck_schedule_anneal.yaml
examples/outputs/run1/: C.npy  linecut_vertical_x1p0um.csv
outputs/run1/: linecut_horizontal_y0p05um.csv
proc2d/: __init__.py  __main__.py  cli.py  deck.py  deposition.py  diffusion.py  electrical.py  engine.py  errors.py  etch.py  field_maps.py  grid.py  gui.py  gui_app.py  gui_bridge.py  gui_script.py  implant.py  io.py  mask.py  metrics.py  oxidation.py  presets.py  selfcheck.py  units.py
proc2d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
proc2d/analysis/: __init__.py  metrics.py  reports.py
proc2d/app/: __init__.py  cli.py
proc2d/app/gui/: __init__.py  app.py  compare.py  forms.py  session.py  simulation.py  storage.py  tabs.py  unit_input.py
proc2d/config/: __init__.py  deck_models.py  gui_models.py  parser.py  validators.py
proc2d/domain/: __init__.py  constants.py  grid.py  state.py  units.py
proc2d/export/: __init__.py  csv_writer.py  history_writer.py  manager.py  metrics_writer.py  npy_writer.py  png_writer.py  vtk_writer.py
proc2d/physics/: __init__.py  deposition.py  diffusion.py  electrical.py  etch.py  implant.py  mask.py  oxidation.py
proc2d/pipeline/: __init__.py  context.py  engine.py  registry.py  step_base.py
proc2d/pipeline/steps/: __init__.py  analyze_step.py  anneal_step.py  common.py  deposition_step.py  electrical_step.py  (+5 more)
proc2d/services/: __init__.py  compare_service.py  simulation_service.py
scripts/: bootstrap_dev.sh  setup_user_install.sh  setup_venv.sh
tests/: test_1d_limit.py  test_analyze_iso_area_option.py  test_cap_models.py  test_deck_cap_model.py  test_deposition_etch_physics.py  test_electrical_step_models.py  test_engine_and_gui_bridge.py  test_export_manager.py  test_gui_input_units.py  test_gui_map_style_rules.py  test_gui_map_tabs.py  test_gui_storage_manager.py  test_history.py  test_iso_area_methods.py  test_marker_policy.py  test_mass_conservation.py  test_metrics.py  test_oxidation_fractional_mask.py  test_oxidation_p2.py  test_physical_maps.py  test_pipeline_engine_errors.py  test_selfcheck.py  test_service_parity.py  test_step_registry_new_steps.py  test_symmetry.py  test_vtk_writer.py
tests/adapters/: test_cli_adapter.py  test_compat_wrappers.py  test_gui_simulation_adapter.py  test_gui_simulation_adapter_maps.py
tests/config/: test_gui_deck_builder_defaults.py  test_parser.py  test_parser_new_process_steps.py  test_validators.py
tests/integration/: test_pipeline_deposition_etch_electrical.py  test_pipeline_engine.py
